# frigate-mcp

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ghcr.yml
src/frigate_mcp/: __init__.py  __main__.py  config.py  server.py
src/frigate_mcp/client/: __init__.py  rest_client.py
src/frigate_mcp/tools/: __init__.py  tools_cameras.py  tools_classification.py  tools_events.py  tools_exports.py  tools_labels.py  tools_notifications.py  tools_recordings.py  tools_review.py  tools_system.py
